# topman

./: .anjuta_sym_db.db  ChangeLog  Makefile  Makefile.in  README.md  aclocal.m4  config.h  config.status  configure  configure.ac  configure.ac~
.anjuta/session/: anjuta.session  dock-layout.xml
.github/workflows/: ccpp.yml
DEBIAN/: control
autom4te.cache/: output.1  requests  traces.0  traces.1
opt/topman/: computers.db
po/: ChangeLog  Makefile  Makefile.in  Makefile~  POTFILES  POTFILES.in
src/: .topman.kate-swp  Makefile  Makefile.am  Makefile.am~  Makefile.in  file.sh  topman  topman.desktop  topman.desktop.in~  topman.py~  topman.ui  topman.ui~  topman~
topman/DEBIAN/: control  postinst
topman/opt/topman/: TopMan.desktop  gpl3.txt
